# aipd-label-extension

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: example_patents.csv
models/: README.md
scripts/: export_model_bundle.py
src/aipd_label_extension/: __init__.py  cli.py  embed.py  model.py  score.py  text.py
tests/: test_pipeline.py
