[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aipd-label-extension"
version = "0.1.0"
description = "Portable post-2023 extension of USPTO AIPD document labels"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "torch>=2.2",
  "transformers>=4.51",
]

[project.optional-dependencies]
gpu = ["vllm>=0.8"]
test = ["pytest>=8"]

[project.scripts]
aipd-label-extension = "aipd_label_extension.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

